# mathematicaCPP

./: README.md
MyProject1/: CMakeLists.txt  main.cpp
