CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(myproject1)

MACRO(USE_CXX11)
  IF(CMAKE_VERSION VERSION_LESS "3.1")
    IF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
      SET(CMAKE_CXX_FLAGS "--std=gnu++14 ${CMAKE_CXX_FLAGS}")
    ENDIF()
  ELSE()
    SET(CMAKE_CXX_STANDARD 14)
  ENDIF()
ENDMACRO(USE_CXX11)

USE_CXX11()

SET(CMAKE_CXX_FLAGS "-ftemplate-backtrace-limit=0 -I/home/lindorfer/Programs/boost_1_69_0/boost ${CMAKE_CXX_FLAGS}")

ADD_SUBDIRECTORY(mathematicapp)

SET(MYPROJECT_SOURCES
    main.cpp
)

ADD_EXECUTABLE(myproject1 ${MYPROJECT_SOURCES})
TARGET_LINK_LIBRARIES(myproject1 mathematica++)
